PATCH /editions/{id}/content
